--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:9091}
-spring.datasource.url=jdbc:mysql://localhost:3306/user-crud
+server.port=${PORT:9090}
+spring.datasource.url=jdbc:mysql://localhost:3306/usercrud
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
