--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,16 @@
 
 
 
-
 	</dependencies>
+
+	<properties>
+		<java.version>17</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+		<junit.jupiter.version>5.8.2</junit.jupiter.version>
+		<junit.platform.version>1.8.2</junit.platform.version>
+	</properties>
 
 	<build>
 		<plugins>
